--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,10 +1,4 @@
-#log4j.rootLogger=DEBUG, stdout
-#log4j.logger.deng=INFO
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=%-6r [%15.15t] %-5p %30.30c %x - %m%n
-
 log4j.rootLogger=DEBUG, STDOUT
 log4j.appender.STDOUT=org.apache.log4j.ConsoleAppender
 log4j.appender.STDOUT.layout=org.apache.log4j.PatternLayout
-log4j.appender.STDOUT.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+log4j.appender.STDOUT.layout.ConversionPattern=%d{HH:mm:ss,SSS} [%15.15t] %-5p %x - %m (%F:%L)%n
